# posti

./: README.md  app.py  example.json  pyproject.toml  run_posti.py
posti_core/: posti.py
templates/: index.html
