[tool.poetry]
name = "posti"
version = "0.1.0"
description = ""
authors = ["Samuel Chavez <sa5m.escom@gmail.com>"]
readme = "README.md"
packages = [{include = "posti"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.2.1"
requests = "2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
